--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ header#main-header {
   height: 46px;
   background: #fff;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+  position: relative;
+  z-index: 1;
 }
 header#main-header .content {
   display: flex;
@@ -81,4 +83,14 @@ header#main-header div.side input {
   color: #667581;
   font-size: 12px;
   background: #f5f8fa url("/images/search.svg") no-repeat 190px center;
+}
+div.banner {
+  height: 380px;
+  width: 100%;
+  background: #3bb9e3;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
 }
