--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ header#main-header div.side input {
   background: #f5f8fa url("/images/search.svg") no-repeat 190px center;
 }
 div.banner {
-  height: 380px;
+  height: 300px;
   width: 100%;
   background: #3bb9e3;
 
@@ -148,4 +148,97 @@ div.bar .content .actions button {
   justify-content: center;
 
   margin-right: 20px;
+}
+div.wrapper-content {
+  display: flex;
+}
+div.wrapper-content aside.profile {
+  width: 260px;
+}
+div.wrapper-content aside.profile img.avatar {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 5px solid #fff;
+  margin-top: -130px;
+}
+div.wrapper-content aside.profile h1 {
+  font-size: 21px;
+  color: #1f2226;
+  margin-top: 10px;
+}
+div.wrapper-content aside.profile span {
+  font-size: 14px;
+  color: #53626c;
+}
+div.wrapper-content aside.profile p {
+  margin-top: 15px;
+  font-size: 14px;
+  color: #1f2226;
+}
+div.wrapper-content aside.profile ul {
+  margin-top: 20px;
+  list-style: none;
+}
+div.wrapper-content aside.profile ul.list li {
+  list-style: none;
+  font-size: 14px;
+  color: #657786;
+
+  display: flex;
+  align-items: center;
+
+  margin-top: 5px;
+}
+div.wrapper-content aside.profile li:first-child {
+  margin: 0;
+}
+div.wrapper-content aside.profile li img {
+  margin-right: 10px;
+}
+div.wrapper-content aside.profile .widget {
+  margin-top: 20px;
+}
+div.wrapper-content aside.profile .widget strong {
+  font-weight: normal;
+  color: #3bb9e3;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+}
+div.wrapper-content aside.profile .widget strong img {
+  margin-right: 5px;
+}
+div.wrapper-content aside.profile .followers ul {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  align-items: flex-start;
+}
+div.wrapper-content aside.profile .followers ul li {
+  width: 45px;
+  height: 45px;
+  background: #d0d5d9;
+  border-radius: 50%;
+  flex-grow: 1;
+  flex-shrink: 0;
+  margin: 0 5px 10px 0;
+}
+div.wrapper-content aside.profile .images ul {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  align-items: flex-start;
+}
+div.wrapper-content aside.profile .images ul li {
+  width: 80px;
+  height: 80px;
+  background: #d0d5d9;
+  border-radius: 8px;
+  margin-right: 5px;
+  flex-grow: 1;
+  flex-shrink: 0;
+  margin: 0 5px 5px 0;
 }
